--- a/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
+++ b/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
@@ -74,9 +74,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextMessage.cs" />
+    <Compile Include="TextMessageReceivedEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
