Work pretty well now.  Code looks neater.

--- a/Hubot-MSGroupChatAdapterService/App.config
+++ b/Hubot-MSGroupChatAdapterService/App.config
@@ -6,6 +6,7 @@
 
   <appSettings>
 
+    <add key="HubotUri" value="ws://172.31.40.209:4773" />
     <add key="OcsServer" value="win-lync-1.ad.sturrock.org" />
     <add key="UserSipUri" value="sip:oilbot@ad.sturrock.org" />
     <add key="OcsUsername" value="OilBot@ad.sturrock.org" />
