--- a/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
+++ b/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GroupChat.cs" />
+    <Compile Include="Hubot.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
