--- a/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
+++ b/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
@@ -41,7 +41,7 @@
       <HintPath>..\..\Program Files\Microsoft Lync Server 2010\Group Chat SDK\Microsoft.Rtc.Collaboration.GroupChat.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\Hubot-MSGroupChatAdapter\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
