--- a/Hubot-MSGroupChatAdapterService/App.config
+++ b/Hubot-MSGroupChatAdapterService/App.config
@@ -10,8 +10,10 @@
     <add key="OcsServer" value="win-lync-1.ad.sturrock.org" />
     <add key="UserSipUri" value="sip:oilbot@ad.sturrock.org" />
     <add key="OcsUsername" value="OilBot@ad.sturrock.org" />
+    <add key="OcsPassword" value="p@ssw0rd" />
     <add key="LookupServerUri" value="sip:ocschat@ad.sturrock.org" />
     <add key="ChatRoomName" value="Chatbot_Test" />
+    <add key="UseSso" value="false" />
 
   </appSettings>
 </configuration>
