--- a/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
+++ b/Hubot-MSGroupChatAdapterService/Hubot-MSGroupChatAdapterService.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextMessage.cs" />
+    <Compile Include="DisconnectedEventArgs.cs" />
     <Compile Include="TextMessageReceivedEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
